fixed borders on projects so no page jump

--- a/css/main.css
+++ b/css/main.css
@@ -135,15 +135,17 @@ a {
 	width: 220px;
 	height: auto;
 	overflow: hidden;
-	border: 2px solid #424242;
+	border: 3px solid #424242;
+	background-clip: border-box;
 	border-radius: 5px;
 	margin: 5px;
 }
 
 .projects img:hover {
 	border: 3px solid #3299BB;
-	cursor: pointer;
+	background-clip: border-box;
 	border-radius: 15px;
+	cursor: pointer;
 }
 
 
